--- a/_sub-client/vci/jekyll-vci/_config.yml
+++ b/_sub-client/vci/jekyll-vci/_config.yml
@@ -8,7 +8,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://vcichicago.com" # the base hostname & protocol for your site
 phone: 773-555-5555
-address: "3756 W 80th, Chicago 60652"
+address: "3756 w 80th, Chicago 60652"
 address_url: "https://www.google.com/maps?f=q&source=s_q&q=3756+W.+80th+St+Chicago+IL+60652"
 # twitter_username: jekyllrb
 # github_username:  jekyll
